hphp/hack/test/typecheck/like_types/like_casts_cross.php.exp
File "like_casts_cross.php--file2.php", line 7, characters 24-61:
Invalid "as" expression hint (Typing[4195])
File "like_casts_cross.php--file2.php", line 7, characters 42-60:
The "as" operator cannot be used with a function type
